--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,4 +1,46 @@
-<form (submit)="onFormSubmit($event)">
-    <label for="searchTerm" class="font-weight-bold">Enter Search Term and hit Enter:</label><br> 
-    <input id="searchTerm" (input)="term = $event.target.value" />
-</form>
+<div class="row">
+    <div class="col-12" id='formInput'>
+        <form (submit)="onFormSubmit($event)" #f="ngForm">
+
+        <div class="row">
+
+            <div class="col-md-3">
+                <button type="button" class="btn btn-primary">Create DVD</button>    
+            </div>
+
+            <div class="form-group col-md-3">
+                <select
+                    id="selectCategory"
+                    class="form-control"            
+                    name="selectCategory"
+                    [(ngModel)]="selectedCategory"
+                    required>
+                    <!-- <option [ngValue]="null" value="" selected>Select category</option> -->
+                    <option *ngFor="let o of categoryOptions" value="o.value">{{o.name}}</option>
+                </select>
+            </div> <!-- formgroup: selectCategory -->
+            
+            <div class="form-group col-md-3">
+            <input
+                type="text"
+                id="searchTerm"
+                class="form-control"
+                ngModel
+                name="searchTerm"
+                required 
+                (input)="term = $event.target.value"
+                #searchTerm="ngModel">
+            <span class="help-block" *ngIf="!searchTerm.valid && searchTerm.touched">Please enter a search term!</span>
+            </div> <!-- formgroup: searchTerm -->                  
+            <div  col-md-3>
+                <button
+                    class="btn btn-primary"
+                    type="submit"
+                    [disabled]="!f.valid">Search
+                </button>
+            </div>
+        </div>
+    </form>    
+    <!-- {{f.valid}} -->
+    </div> <!-- formInput -->      
+</div> row
