--- a/src/app/dvd-list/dvd-list.component.html
+++ b/src/app/dvd-list/dvd-list.component.html
@@ -25,8 +25,9 @@
         <td>{{ dvd.director }}</td>
         <td>{{ dvd.rating }}</td>
         <td>
-          <a href="#editDvd" ng-click="edit(dvd.id)" class="btn btn-outline-secondary btn-sm">Edit</a>               
-          <a href="#deleteDvd" ng-click="remove(dvd.id)" class="btn btn-danger btn-sm">Delete</a>
+          <button (click)="edit(dvd.id)" class="btn btn-outline-secondary btn-sm">Edit</button>               
+          <button (click)="remove(dvd.id)" class="btn btn-danger btn-sm">Delete</button>
+          {{ dvd.id }}
         </td>
       </tr>
     </tbody>
