--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <h1 class="text-center">{{ title }}</h1>
+  <app-create-form></app-create-form>
   <app-search-bar (submitted)="onTerm($event)"></app-search-bar>
   <app-dvd-list [dvds]="dvds"></app-dvd-list>
 </div>
