--- a/src/app/dvd-list/dvd-list.component.html
+++ b/src/app/dvd-list/dvd-list.component.html
@@ -26,8 +26,7 @@
         <td>{{ dvd.rating }}</td>
         <td>
           <button (click)="edit(dvd.id)" class="btn btn-outline-secondary btn-sm">Edit</button>               
-          <button (click)="remove(dvd.id)" class="btn btn-danger btn-sm">Delete</button>
-          {{ dvd.id }}
+          <button style="margin-left: 10px" (click)="remove(dvd.id)" class="btn btn-danger btn-sm">Delete</button>
         </td>
       </tr>
     </tbody>
