--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,5 +1,6 @@
 <div class="row">
     <div class="col-12" id='formInput'>
+        <h1>Search Dvds</h1>
         <form (submit)="onFormSubmit($event)" #f="ngForm">
 
             <div
@@ -9,7 +10,7 @@
                 class="row">
                 
                 <div class="form-group col-md-5">
-                    <button type="button" class="btn btn-primary">Create DVD</button>    
+                    <button (click)="create()" type="button" class="btn btn-primary" disabled>Create DVD</button>    
                 </div>
                 
                 <div class="form-group col-md-3">
