--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,63 @@
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<!-- * * * * * * * * * * * * * * * Author: Cindy Okino * * * * * * * * * * * * * * * * -->
+<!-- * * * * * * * * * * * * * * * Angular app: angular-dvdlibrary * * * * * * * * * * * * * * * * -->
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+
+
 <div class="container">
-  <h1 class="text-center">{{ title }}</h1>
-  <app-create-form></app-create-form>
-  <app-search-bar (submitted)="onTerm($event)"></app-search-bar>
-  <app-dvd-list [dvds]="dvds"></app-dvd-list>
-</div>
+    <h1 class="text-center">{{ title }}</h1>
+    <div class="col-12" id='formInput' (submitted)="onTerm($event)">
+        <form (submit)="onFormSubmit($event)" #f="ngForm">
+
+            <div
+                id="search-data"
+                ngModelGroup="searchData"
+                #userData="ngModelGroup"
+                class="row">
+                
+                <div class="form-group col-md-5">
+                    <a href="/create-form"><button (click)="create()" type="button" class="btn btn-primary">Create DVD</button></a>
+                    <!-- <a href="/dvd-list"><button type="button" class="btn btn-primary">DVD List</button></a> -->
+                </div>
+                
+                <div class="form-group col-md-3">
+                    <select
+                        id="selectCategory"
+                        class="form-control"            
+                        name="selectCategory"
+                        [(ngModel)]="selectedCategory"
+                        (change)="onChange($event.target.value)"
+                        required>
+                        <option value="" selected disabled>Select category</option>
+                        <option value="{{o.value}}" *ngFor="let o of categoryOptions">{{ o.name }}</option>
+                    </select>
+                </div> <!-- formgroup: selectCategory -->
+                
+                <div class="form-group col-md-3">
+                    <input
+                        type="text"
+                        id="searchTerm"
+                        class="form-control"
+                        ngModel
+                        name="searchTerm"
+                        required 
+                        (input)="term = $event.target.value"
+                        #searchTerm="ngModel">
+                    <span class="help-block" *ngIf="!searchTerm.valid && searchTerm.touched">Please enter a search term!</span>
+                </div> <!-- formgroup: searchTerm -->     
+                
+                <div  class="form-group col-md-1">
+                    <button
+                        class="btn btn-primary"
+                        type="submit"
+                        [disabled]="!f.valid">Search
+                    </button>
+                </div>
+            </div>
+
+        </form>  
+    </div> <!-- formInput -->      
+</div> 
+
+
+<router-outlet></router-outlet>
