Edit form works ! App works, just need to show dvds details page

--- a/src/app/create-form/create-form/create-form.component.html
+++ b/src/app/create-form/create-form/create-form.component.html
@@ -55,10 +55,10 @@
                         class="form-control"
                         [ngModel]="defaultRating"
                         name="rating">
-                        <option value="g" selected >G</option>
-                        <option value="pg12">PG 12</option>
-                        <option value="r15+">R 15+</option>
-                        <option value="r18+">R 18+</option>
+                        <option value="G" selected >G</option>
+                        <option value="PG 12">PG 12</option>
+                        <option value="R 15+">R 15+</option>
+                        <option value="R 18+">R 18+</option>
                     </select>
                 </div> <!-- formgroup: rating -->
             
