--- a/src/app/dvd-list/dvd-list/dvd-list.component.html
+++ b/src/app/dvd-list/dvd-list/dvd-list.component.html
@@ -27,7 +27,7 @@
           <td>{{ dvd.rating }}</td>
           <td>
             <!-- <button (click)="edit(dvd.id)" class="btn btn-outline-secondary btn-sm">Edit</button>   -->
-            <a href="/edit-form"><button (click)="edit()" type="button" class="btn btn-outline-secondary btn-sm">Edit</button></a>             
+            <span><button (click)="edit(dvd)" type="button" class="btn btn-outline-secondary btn-sm">Edit</button></span>             
             <button style="margin-left: 10px" (click)="remove(dvd.id)" class="btn btn-danger btn-sm">Delete</button>
           </td>
         </tr>
